--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.18",
         "bootstrap": "^4.2.1",
         "cross-env": "^5.1",
+        "css-loader": "^2.1.0",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
@@ -21,9 +22,8 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.2",
-		"css-loader": "^2.1.0",
-        "vue-style-loader": "^4.1.2"
+        "vue": "^2.6.4",
+        "vue-style-loader": "^4.1.2",
+        "vue-template-compiler": "^2.6.4"
     }
 }
